# aidlc

./: .env.example  .gitignore  Makefile  QA-REPORT-WP84.md  README.md  docker-compose.yml  index.html  ipl-schedule.html  ipl.html  population.html  pyproject.toml  qa-results.md  weather-api-research.md  weather-api-test.js
.claude/: settings.local.json
.github/workflows/: ci.yml
aidlc/: __init__.py  cache.py  cli.py  config.py  db.py  git_local.py  logging.py
aidlc/coding_agents/: __init__.py  base.py  claude_code.py
aidlc/git_host/: __init__.py  github.py
aidlc/llm/: __init__.py  anthropic.py  base.py  groq.py
aidlc/openproject/: __init__.py  client.py  models.py
aidlc/prompts/: __init__.py  idea_to_spec.md  review_pr.md  spec_to_tasks.md  task_to_code.md  task_to_code_local.md
aidlc/weather/: __init__.py  cities.py  client.py  models.py  (+1 more)
docs/: ARCHITECTURE.md  QA_TEST_REPORT.md  WORKFLOWS.md  csv-export-permissions.md  csv_export_permissions.md  daily-weather-display-format.md  design-csv-export.md  research-city-list-weather-data-sources.md  research-free-weather-apis.md  ui-design-spec.md
frontend/: app.js  cities.json  index.html  style.css
research/: weather_data_sources.md
scripts/: seed_openproject.py
tests/: conftest.py  fakes.py  test_cache.py  test_city_data.py  test_coding_agents.py  test_config.py  test_csv_export_permissions.py  test_frontend_accessibility.py  test_github_client.py  test_llm_base.py  test_openproject_client.py  test_openproject_models.py  test_performance.py  test_prompts.py  test_weather.py  test_weather_data_sources.py  test_weather_display.py  test_weather_errors.py  test_workflow_task_to_code_local.py  test_workflows.py
weather/: __init__.py  api.py  app.py  cities.py  display.py  errors.py  models.py  service.py
(+10 files in other folders)
