[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidlc"
version = "0.1.0"
description = "AI Development Lifecycle (AI-DLC) agent wired to OpenProject + GitHub"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CTO Office" }]
dependencies = [
    "anthropic>=0.39.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlmodel>=0.0.16",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "types-requests",
]

[project.scripts]
aidlc = "aidlc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["aidlc"]

[tool.hatch.build.targets.wheel.force-include]
"aidlc/prompts" = "aidlc/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "C4", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=aidlc --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]
